fixed my css grid from overflow

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -122,6 +122,9 @@ span:after {
     display: grid;
     grid-template-columns: 33.33% 33.33% 33.33%;
     grid-row-gap: 50px;
+    grid-column-gap: 20px;
+    margin: auto;
+    max-width: 100%;
 }
 .skills section img {
     -webkit-filter: grayscale(100%);
